--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <li><%= link_to "ホーム", root_path %></li>
         <% if logged_in? && current_user.admin? %>
           <li><%= link_to "全てのユーザー", users_path %></li>
-          <li><%= link_to "基本情報編集", '#' %></li>
+          <li><%= link_to "基本情報編集", edit_basic_info_all_user_path(current_user) %></li>
         <% end %>
         <% if logged_in? %>  
           <li class="dropdown">
