wday-color-change

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -23,7 +23,18 @@
     vertical-align: middle;
     text-align: center;
   }
-}
+} 
+
+  .wday6 {
+  color: Blue;
+  }
+  
+  .wday0 {
+  color: Red;
+  }
+  
+  
+
 
 /* 入力フォーム */
 
@@ -61,3 +72,4 @@
   margin: 15px 0;
   width: 30%;
 }
+
