--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -18,11 +18,13 @@
   th {
     vertical-align: middle;
     text-align: center;
+    width: calc(100% / 30 * 1);
   }
   td {
     vertical-align: middle;
     text-align: center;
   }
+   
 } 
 
   .wday6 {
