--- a/app/views/users/edit_basic_info_all.html.erb
+++ b/app/views/users/edit_basic_info_all.html.erb
@@ -1,4 +1,4 @@
-<% provide(:class_text, 'basic-info-all') %>
+<% provide(:class_text, 'basic-info') %>
 <% provide(:button_text, '更新') %>
 
 <div class="row">
