--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -9,29 +9,40 @@
           <th>曜日</th>
           <th>出勤時間</th>
           <th>退勤時間</th>
+          <th>翌日</th>
           <th>在社時間</th>
           <th>備考</th>
+          <th>指示者確認㊞</th>
         </tr>
       </thead>
       <tbody>
+      
         <% @attendances.each do |day| %>
           <%= f.fields_for "attendances[]", day do |attendance| %>
             <tr>
               <td><%= l(day.worked_on, format: :short) %></td>
               <td><%= $days_of_the_week[day.worked_on.wday] %></td>
-              <% if (Date.current < day.worked_on) %>
-              <td><%= attendance.time_field :started_at, readonly: true, class: "form-control" %></td>
-              <td><%= attendance.time_field :finished_at, readonly: true, class: "form-control" %></td>
+              <% if !current_user.admin? && (Date.current < day.worked_on) %>
+                <td><%= attendance.time_field :started_at, readonly: true, class: "form-control" %></td>
+                <td><%= attendance.time_field :finished_at, readonly: true, class: "form-control" %></td>
               <% else %>
-              <td><%= attendance.time_field :started_at, class: "form-control" %></td>
-              <td><%= attendance.time_field :finished_at, class: "form-control" %></td>
+                <td><%= attendance.time_field :started_at, class: "form-control" %></td>
+                <td><%= attendance.time_field :finished_at, class: "form-control" %></td>
               <% end %>
+              <th><%= attendance.check_box :next_day, id: "next_day"  %></th>
               <td>
                 <% if day.started_at.present? && day.finished_at.present? %>
                   <%= working_times(day.started_at, day.finished_at) %>
                 <% end %>
               </td>
               <td><%= attendance.text_field :note, class: "form-control" %></td>
+              <% if params[:id] == "2" %>
+              <th><%= attendance.select :confirmation_one_month,[["なし","なし"],["上長B","上長B"]], class: "form-control" %></th>
+              <% elsif params[:id] == "3" %>
+              <th><%= attendance.select :confirmation_one_month,[["なし","なし"],["上長A","上長A"]], class: "form-control" %></th>
+              <% else %>
+              <th><%= attendance.select :confirmation_one_month,[["なし","なし"],["上長A","上長A"],["上長B","上長B"]], class: "form-control" %></th>
+              <% end %>
             </tr>
           <% end %>
         <% end %>
