--- a/app/views/bases/edit.html.erb
+++ b/app/views/bases/edit.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, "Edit") %>
-<% provide(:class_text, 'user--edit') %>
+<% provide(:class_text, 'baseedit') %>
 <% provide(:button_text, '更新') %>
-<h1>ユーザー情報の更新</h1>
+<h1>拠点情報の更新</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= render 'form' %>
+    <%= render 'edit_form' %>
   </div>
 </div>
