--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,31 +1,38 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
+
   <div class="container">
     <%= link_to "Attendance App", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "ホーム", root_path %></li>
-        <% if logged_in? && current_user.admin? %>
-          <li><%= link_to "全てのユーザー", users_path %></li>
-          <li><%= link_to "基本情報編集", edit_basic_info_all_user_path(current_user) %></li>
-        <% end %>
-        <% if logged_in? %>  
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        <% if logged_in? %>
+          <% if current_user.admin == true %>
+            <li><%= link_to "ユーザー一覧", users_path %></li>
+            <li><%= link_to "出勤社員一覧", in_attendance_user_path(current_user) %></li>
+            <li><%= link_to "拠点情報の修正", bases_path %></li>
+            <li><%= link_to "基本情報の修正", basic_info_user_path(current_user) %></li>
+          <% end %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               メニュー <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "勤怠", current_user %></li>
-              <li><%= link_to "設定", edit_user_path(current_user) %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "ログアウト", logout_path, method: :delete %>
-              </li>
-            </ul>
-          </li>
+              </a>
+              <ul class="dropdown-menu">
+                <% unless current_user.admin == true %>
+                <li><%= link_to "勤怠", current_user %></li>
+                <% end %>
+                <li><%= link_to "設定", edit_user_path(current_user) %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= button_to "ログアウト", logout_path, method: :delete %>
+                </li>
+              </ul>
+            </li>
+          
         <% else %>
           <li><%= link_to "ログイン", login_path %></li>
         <% end %>
       </ul>
     </nav>
   </div>
+  
 </header>
