--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,62 +1,44 @@
 <% provide(:title, 'All Users') %>
+<% provide(:class_text, 'user--edit') %>
+<% provide(:button_text, '更新') %>
+<h1>ユーザー一覧</h1>
 
-<% if params[:search].present? %>
-      <h1>検索結果</h1>
-<% else %>
-      <h1>全てのユーザー</h1>
-<% end %>
-
-<div class= "input-search">
-ユーザー名検索　　　　　　　　　　
-<%= form_with url: users_path, method: :get, local: true do |form| %>
-  <%= form.text_field :search, value: params[:search], :placeholder => "キーワードを入力" %>
-  <%= form.submit '検索', name: nil, class: "btn btn-primary" %>
-<% end %>
-</div>
-  
 <div class="col-md-10 col-md-offset-1">
-  <%= will_paginate %>
-  
-  
-  <table class="table table-condensed table-hover" id="table-users">
-    <thead>
-      <tr>
-        <th><%= User.human_attribute_name :name %></th>
-        <th class="center"><%= User.human_attribute_name :department %></th>
-        <% if current_user.admin? %>
-          <th class="center"><%= User.human_attribute_name :basic_time %></th>
-          <th class="center"><%= User.human_attribute_name :work_time %></th>
-        <% end %>
-        <th></th>
-      </tr>
-    </thead>
 
-    <% @users.each do |user| %>
-      <tr>
-        <td>
-          <% if current_user.admin? %>
-            <%= link_to user.name, user %>
-          <% else %>
-            <%= user.name %>
-          <% end %>
-        </td>
-        <td class="center"><%= user.department.present? ? user.department : "未所属" %></td>
-        <% if current_user.admin? %>
-          <td class="center"><%= format_basic_info(user.basic_time) %></td>
-          <td class="center"><%= format_basic_info(user.work_time) %></td>
-        <% end %>
-        <td class="center">
+  <%= form_tag import_users_path, multipart: true do %>
+    <%= file_field_tag :file %>
+    <%= submit_tag "インポート" %>
+  <% end %>
+
+  <%= will_paginate %>
+  <table class="table-frame table-margin table-block">
+  <% @users.each do |user| %>
+    <tr>
+      <td>
+        <div class="col-md-11 col-md-offset-1">
           <% if current_user.admin? && !current_user?(user) %>
-            <%= link_to "基本情報編集", edit_basic_info_user_path(user), remote: true, class: "btn btn-success" %>
-            <%= link_to "削除", user, method: :delete,
-                data: { confirm: "削除してよろしいですか？" }, class: "btn btn-danger" %>
+          <%= user.name %><br>
+          <%= button_to "削除", user, method: :delete,
+                                    data: { confirm: "削除してもよろしいですか？" },
+                                    class: "btn btn-primary btn-default" %><br>
+          <div class="panel-group">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <button type="button" data-toggle="collapse" data-target="#collapse<%= user.id %>" class="btn btn-primary btn-lg">編集</button>
+                </h4>
+              </div>
+                <div id="collapse<%= user.id %>" class="panel-collapse collapse">
+                
+                <div class="panel-body"><%= render 'edit_basic_info', { user: user } %>
+                </div>
+            </div>
+          </div>
           <% end %>
-        </td>
-      </tr>
-    <% end %>
+        </div>
+      </td>
+    </tr>
+  <% end %>
   </table>
   <%= will_paginate %>
 </div>
-
-<!--モーダルウインドウ表示-->
-<div id="edit-basic-info" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
