--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,93 +1,211 @@
 <% provide(:title, @user.name) %>
 <div>
   <table class="table table-bordered table-condensed user-table">
+
     <tr>
-      <td><%= link_to "⇦", user_path(date: @first_day.prev_month), class: "btn btn-info" %>【<%= l(@first_day, format: :middle) %>】勤怠管理表 <%= link_to "⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %></td>
-      <td>指定勤務時間：<%= format_basic_info(@user.work_time) %></td>
-      <td colspan="3">基本時間：<%= format_basic_info(@user.basic_time) %></td>
-      <td>月初日：<%= l(@first_day, format: :short) %></td>
+      <td><% if current_user?(@user) %>
+          <%= link_to "⇦", user_path(date: @first_day.prev_month), class: "btn btn-primary" %>
+          <% end %>
+         【<%= l(@first_day, format: :middle) %>】勤怠管理表 
+          <% if current_user?(@user) %>
+          <%= link_to "⇨", user_path(date: @first_day.next_month), class: "btn btn-primary" %>
+          <% end %>
+      </td>
+      <td>指定勤務開始時間：<%= format_basic_info(@user.designated_work_start_time) %><br>
+          指定勤務終了時間：<%= format_basic_info(@user.designated_work_end_time) %>
+      </td>
+      <td colspan="3">基本勤務時間：<%= format_basic_info(@user.basic_work_time) %></td>
+      <td>初日：<%= l(@first_day, format: :short) %></td>
     </tr>
 
     <tr>
-      <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
-      <td>名前：<%= @user.name %></td>
+      <td>所属：<%= @user.affiliation.present? ? @user.affiliation : "未所属" %></td>
+      <td>氏名：<%= @user.name %></td>
       <td>コード</td>
-      <td> </td>
+      <td><%= @user.uid %></td>
       <td>出勤日数：<%= @worked_sum %>日</td>
       <td>締め：<%= l(@last_day, format: :short) %></td>
     </tr>
   </table>
 </div>
-<div class="btn-users-show">
+<div>
+ <% if current_user.superior == true && current_user?(@user) %>
+    <% if @approvals_manager.confirmation_manager == "上長A" ||
+          @approvals_manager.confirmation_manager == "上長B" %>
+    <%= link_to "【所属長承認申請のお知らせ】#{@approval_manager_sum}件通知があります", attendances_edit_apply_manager_user_path(date: @first_day), remote: true, class: "text-danger" %>
+    <% else %>
+    【所属長承認申請のお知らせ】
+    <% end %>
+    <br>
   
-  <%= link_to "勤怠編集へ", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
-  
+    <% if @approvals_one_month.confirmation_one_month == "上長A" || 
+          @approvals_one_month.confirmation_one_month == "上長B" %>
+    <%= link_to "【勤怠変更申請のお知らせ】#{@approval_one_month_sum}件通知があります", attendances_edit_apply_one_month_user_path(date: @first_day), remote: true, class: "text-danger" %>
+    <% else %>
+    【勤怠変更申請のお知らせ】
+    <% end %>
+    <br>
+    
+    <% if @approvals_overtime.confirmation == "上長A" ||
+          @approvals_overtime.confirmation == "上長B" %>
+    <%= link_to "【残業申請のお知らせ】#{@approval_overtime_sum}件通知があります", attendances_edit_apply_overtime_user_path(date: @first_day), remote: true, class: "text-danger" %>
+    <% else %>
+    【残業申請のお知らせ】
+    <% end %>
+  <% end %>
+    <br>
+  <% if current_user?(@user) %>
+  <%= link_to "勤怠編集へ", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-primary" %>
+  <%= link_to "CSV出力", attendances_edit_one_month_user_path(format: :csv), class: "btn btn-primary" %><br>
+  <%= link_to "勤怠修正ログ(承認済)", attendances_log_attendances_user_path(date: @first_day), class: "btn btn-primary" %>
+  <% end %>
 </div>
 <div>
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
     <thead>
       <tr>
-        <th rowspan="2">日付</th>
-        <th rowspan="2">曜日</th>
+        <th rowspan="2"></th>
+        <th colspan="10">【実績】</th>
+        <th colspan="5">所定外勤務</th>
+      </tr>
+      <tr>
+        <th rowspan="3">日付</th>
+        <th rowspan="3">曜日</th>
         <th colspan="3">出勤時間</th>
         <th colspan="3">退勤時間</th>
         <th rowspan="2">在社時間</th>
         <th rowspan="2">備考</th>
+        <th colspan="2">終了予定時間</th>
+        <th rowspan="2">時間外時間</th>
+        <th rowspan="2">業務処理内容</th>
+        <th rowspan="2">指示者確認㊞</th>
       </tr>
       <tr>
+        <th>残業申請</th>
         <th>時</th>
         <th>分</th>
         <th></th>
         <th>時</th>
         <th>分</th>
         <th></th>
-      </tr>  
+        <th>時</th>
+        <th>分</th>
+      </tr>
     </thead>
 
     <tbody>
       <% @attendances.each do |day| %>
         <tr>
+          <td><% if current_user?(@user) %>
+              <%= link_to "残業申請", attendances_edit_overtime_user_path(@user, day), remote: true, class: "btn btn-primary" %>
+              <% end %>
+          </td>
           <td><%= l(day.worked_on, format: :short) %></td>
           <td class="<%= "wday#{day.worked_on.wday}"%>"><%= $days_of_the_week[day.worked_on.wday] %></td>
           
           <td><%= l(day.started_at.floor_to(15.minutes), format: :hour) if day.started_at.present? %></td>
           <td><%= l(day.started_at.floor_to(15.minutes), format: :min) if day.started_at.present? %></td>
           <td>
-            <% if (Date.current == day.worked_on) && day.started_at.nil? %>
+            <% if (Date.current == day.worked_on) && day.started_at.nil? && current_user?(@user) %>
             <%= link_to "出勤登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
             <% end %>
           </td>
           <td><%= l(day.finished_at.floor_to(15.minutes), format: :hour) if day.finished_at.present? %></td>
-          <td><%= l(day.finished_at.floor_to(15.minutes), format: :min) if day.finished_at.present? %></td></td>
+          <td><%= l(day.finished_at.floor_to(15.minutes), format: :min) if day.finished_at.present? %></td>
           <td>
-            <% if (Date.current == day.worked_on) && day.started_at.present? && day.finished_at.nil? %>
+            <% if (Date.current == day.worked_on) && day.started_at.present? && day.finished_at.nil? && current_user?(@user) %>
             <%= link_to "退勤登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
             <% end %>
           </td>
           <td>
             <% if day.started_at.present? && day.finished_at.present? %>
-          <%= str_times = working_times(day.started_at.floor_to(15.minutes), day.finished_at.floor_to(15.minutes)) %>
-          <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
-        <% end %>
+            <%= str_times = working_times(day.started_at.floor_to(15.minutes), day.finished_at.floor_to(15.minutes)) %>
+              <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
+            <% end %>
           </td>
           <td><%= day.note %></td>
-        </tr>
+          
+           <td><%= l(day.scheduled_end_time.floor_to(15.minutes), format: :hour) if day.scheduled_end_time.present? %></td>
+           <td><%= l(day.scheduled_end_time.floor_to(15.minutes), format: :min) if day.scheduled_end_time.present? %></td>
+           <td>
+              <% if day.scheduled_end_time.present? && day.finished_at.present? %>
+                  <% if day.next_day == "0" %>
+                   <%= str_times = over_times(day.scheduled_end_time.floor_to(15.minutes), @user.designated_work_end_time.floor_to(15.minutes)) %>
+                  <% else %>
+                   <%= str_times = next_over_times(day.scheduled_end_time.floor_to(15.minutes), @user.designated_work_end_time.floor_to(15.minutes)) %>
+                  <% end %>
+                   <% @total_over_times = @total_over_times.to_f + str_times.to_f %>
+              <% end %>
+           </td>
+           <td><%= day.business_process %></td>
+            <td>
+              <% if day.confirmation == "承認" && day.change == "1" %>
+                残業承認　
+                <% elsif day.confirmation == "否認" && day.change == "1" %>
+                残業否認　
+                <% elsif day.confirmation == "上長A" %>
+                上長Aへ残業申請中
+                <% elsif day.confirmation == "上長B" %>
+                上長Bへ残業申請中
+              <% end %>
+              <% if day.confirmation_one_month == "承認" && day.change_one_month == "1" %>
+                勤怠編集承認
+                <% elsif day.confirmation_one_month == "否認" && day.change_one_month == "1" %>
+                勤怠編集否認
+                <% elsif day.confirmation_one_month == "上長A" %>
+                上長Aへ勤怠編集申請中
+                <% elsif  day.confirmation_one_month == "上長B" %>
+                上長Bへ勤怠編集申請中
+              <% end %>
+            </td>
       <% end %>
     </tbody>
-
+    
     <tfoot>
       <!--rowspan:縦結合、colspan：横結合-->
       <tr>
-        <td colspan="2">累計日数</td>
-        <td colspan="6">総合勤務時間</td>
+        <td></td>
+        <td colspan="2"></td>
+        <td colspan="6"></td>
         <td>累計在社時間</td>
-        <td rowspan="2"></td>
+        <td colspan="5"></td>
+        <td rowspan="2">
+        <%= form_with(model: @user, url: attendances_update_manager_user_path(date: @first_day), local: true, method: :patch) do |f| %>
+          <%= f.fields_for @approval do |attendance| %>
+            <% if @approval.confirmation_manager == "承認" && @approval.change_manager == "1" %>
+              所属長承認　承認<br>
+            <% elsif @approval.confirmation_manager == "否認" && @approval.change_manager == "1"%>
+              所属長承認　否認<br>
+            <% else %>
+              所属長承認　未<br>
+            <% end %>
+              <% if current_user?(@user) %>
+                <% if params[:id] == "2" %>
+                <%= attendance.select :confirmation_manager,[["選択してください","選択してください"],["上長B","上長B"]], class: "form-control" %><br>
+                <% elsif params[:id] == "3" %>
+                <%= attendance.select :confirmation_manager,[["選択してください","選択してください"],["上長A","上長A"]], class: "form-control" %><br>
+                <% else %>
+                <%= attendance.select :confirmation_manager,[["選択してください","選択してください"],["上長A","上長A"],["上長B","上長B"]], class: "form-control" %><br>
+              <% end %>
+              <%= f.submit "申請", class: "btn btn-primary" %></td>
+              <% end %>
+          <% end %>
+        <% end %>
       </tr>
       <tr>
-        <td colspan="2"><%= @attendances.count %></td>
-        <td colspan="6"><%= format_basic_info(@user.work_time).to_f * @worked_sum %></td>
+        <td></td>
+        <td colspan="2"></td>
+        <td colspan="6"></td>
         <td><%= format("%.2f", @total_working_times.to_f) %></td>
+        <td colspan="5"></td>
+        
       </tr>
     </tfoot>    
   </table>
 </div>
+
+<!--モーダルウインドウ表示-->
+<div id="edit-overtime" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div id="edit-apply-manager" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div id="edit-apply-one-month" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<div id="edit-apply-overtime" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
